z-index to hide captcha area & correct condition on social-media-buttons to hide it on recipe post type

--- a/inc/assets/css/presets/theme-option/cuciniale-light.css
+++ b/inc/assets/css/presets/theme-option/cuciniale-light.css
@@ -409,9 +409,11 @@ template {
   display: none !important;
 }
 
-#colophon, .entry-footer {
+#colophon {
   position: relative;
   z-index: 10;
+  bottom: -8px;
+  top: 0;
 }
 
 h1, h3, h4, h5, h6,
