--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -450,6 +450,7 @@ template {
   position: relative;
   z-index: 10;
   bottom: -8px;
+  top: 0;
 }
 
 .edit-link {
